--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
 .main {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
+    font-family: monospace;
+    text-align: center;
+    margin: 40px;
 }
